added resolving of relative urls via the base-resource